# python_voltage_monitor

./: README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
src/: main.py
src/python_voltage_monitor/readers/impl/: current_jump_strategy.py  current_smooth_change_strategy.py  plc_voltage_reader.py
src/python_voltage_monitor/services/: voltage_service.py
src/python_voltage_monitor/utils/: config_enum.py
src/readers/: interfaces.py  plc_reader.py
src/readers/impl/: current_jump_strategy.py  current_smooth_change_strategy.py  plc_voltage_reader.py
src/services/: voltage_service.py
src/utils/: config_enum.py  config_loader.py  interface.py  validators.py
src/utils/impl/: validators.py
test/: main.py  mock_reader.py  test_reader.py
test/readers/: main.py  test_reader.py
test/utils/: main.py  test_validate_float.py  test_validate_type.py
tests/readers/: test_current_jump_strategy.py  test_current_smooth_change_strategy.py  test_plc_voltage_reader.py  voltage_reader.py
tests/utils/: test_validate_type.py
